--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -1,6 +1,6 @@
 @keyframes showRules {
   0% {
-    transform: translate(0%, 0%);
+    transform: translate(-10%, -10%);
     opacity: 0;
     pointer-events: none;
   }
@@ -18,7 +18,7 @@
     transform: translate(-50%, -50%);
   }
   100% {
-    transform: translate(0%, 0%);
+    transform: translate(-10%, -10%);
     opacity: 0;
     pointer-events: none;
   }
@@ -27,17 +27,61 @@
 @keyframes opacitylow {
   0% {
     opacity: 1;
+    pointer-events: all;
   }
   100% {
-    opacity: 0.1;
+    opacity: 0.4;
+    pointer-events: none;
+  }
+}
+
+@keyframes backgroundhigh {
+  0% {
+    background: radial-gradient($background);
+  }
+  100% {
+    background: radial-gradient(#0d1424, #0a1020);
+  }
+}
+
+@keyframes backgroundlow {
+  0% {
+    background: radial-gradient(#0d1424, #0a1020);
+  }
+  100% {
+    background: radial-gradient($background);
   }
 }
 
 @keyframes opacityhigh {
   0% {
-    opacity: 0.1;
+    opacity: 0.4;
+    pointer-events: none;
   }
   100% {
     opacity: 1;
+    pointer-events: all;
+  }
+}
+
+@keyframes opacityzero {
+  0% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+
+@keyframes opacityone {
+  0% {
+    opacity: 0;
+    pointer-events: none;
+  }
+  100% {
+    opacity: 1;
+    pointer-events: all;
   }
 }
