--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,13 +7,13 @@
 }
 body {
   font-family: $font-stack;
-  min-height: 100vh;
   background: radial-gradient($background);
 }
 .container {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   padding-top: 50px;
+  pointer-events: all;
 }
 main {
   width: 60%;
@@ -30,7 +30,6 @@ main {
   display: flex;
   justify-content: space-between;
   margin-bottom: 40px;
-
   p {
     text-transform: uppercase;
     color: white;
@@ -49,7 +48,6 @@ main {
   align-items: center;
   padding: 15px 0px;
   border-radius: 10px;
-
   p:first-child {
     color: #3c4da5;
     letter-spacing: 0.12em;
@@ -62,6 +60,7 @@ main {
   }
 }
 .game {
+  opacity: 1;
   position: relative;
   width: 100%;
   display: flex;
@@ -78,11 +77,10 @@ main {
     display: grid;
     place-items: center;
     cursor: pointer;
-
     &:focus {
       outline: none;
     }
-    svg {
+    img {
       transform: scale(1.3);
     }
   }
@@ -97,7 +95,6 @@ main {
   border-radius: 10px;
   background-color: transparent;
   border: 3px solid $border;
-
   &:focus {
     outline: none;
   }
@@ -119,7 +116,6 @@ main {
   justify-content: center;
   margin-bottom: 10px;
   position: absolute;
-
   &:nth-child(2) {
     background: linear-gradient($Paper);
     box-shadow: 0px 8px 3px #2945c3;
@@ -148,14 +144,17 @@ main {
   left: 50%;
   opacity: 0;
   pointer-events: none;
-
+  transform: translate(-10%, -10%);
+  z-index: 99;
   .top {
     display: flex;
     justify-content: space-between;
     padding: 30px;
     margin-bottom: 10px;
     align-items: center;
-
+    img {
+      cursor: pointer;
+    }
     p {
       font-weight: 700;
       font-size: 30px;
@@ -164,10 +163,96 @@ main {
     }
   }
 }
-
 .rules-chart {
   display: flex;
   justify-content: center;
 }
+.step-2 {
+  position: absolute;
+  height: 500px;
+  width: 100%;
+  justify-content: center;
+  align-items: flex-end;
+  bottom: 10vh;
+  padding-bottom: 50px;
+  opacity: 0;
+  pointer-events: none;
+  display: none;
+  .player-pick {
+    margin-right: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .house-pick {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    .pick-wrapper {
+      opacity: 0;
+      z-index: 2;
+      pointer-events: none;
+    }
+    .circle {
+      position: absolute;
+      bottom: 7%;
+      background-color: #172240;
+      width: 230px;
+      height: 230px;
+      border-radius: 100%;
+    }
+  }
+  p {
+    font-size: 25px;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 600;
+    letter-spacing: 0.12em;
+    margin-bottom: 50px;
+  }
+}
 
+.pick-wrapper {
+  width: 290px;
+  height: 290px;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  button {
+    border-radius: 100%;
+    background-color: #e8e8e8;
+    height: 220px;
+    width: 220px;
+    border: none;
+    box-shadow: inset 0px 10px 4px #a8acc0;
+    display: grid;
+    place-items: center;
+
+    &:focus {
+      outline: none;
+    }
+    img {
+      transform: scale(1.8);
+    }
+  }
+}
+#rock-choice {
+  background: linear-gradient($Rock);
+  box-shadow: 0px 9px 4px #9f1635;
+}
+#paper-choice {
+  background: linear-gradient($Paper);
+  box-shadow: 0px 9px 4px #2945c3;
+}
+#scissors-choice {
+  background: linear-gradient($Scissors);
+  box-shadow: 0px 9px 4px #c76c1b;
+}
+.step-4 {
+  justify-content: space-around;
+}
 @import "animation";
+@import "mobile";
