--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -78,3 +78,13 @@
     pointer-events: all;
   }
 }
+@keyframes step3 {
+  0% {
+    opacity: 0;
+    justify-content: center;
+  }
+  100% {
+    opacity: 1;
+    justify-content: space-around;
+  }
+}
