--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,4 +3,6 @@ $Paper: hsl(230, 89%, 62%), hsl(230, 89%, 65%);
 $Rock: hsl(349, 71%, 52), hsl(349, 70%, 56%);
 $background: hsl(214, 47%, 23%), hsl(237, 49%, 15%);
 $font-stack: "Barlow Semi Condensed", sans-serif;
-$border: #53637d;
+$border: hsl(217, 16%, 45%);
+$score: hsl(229, 64%, 46%);
+$darkText: hsl(229, 25%, 31%);
