--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,11 +49,11 @@ main {
   padding: 15px 0px;
   border-radius: 10px;
   p:first-child {
-    color: #3c4da5;
+    color: $score;
     letter-spacing: 0.12em;
   }
   P:last-child {
-    color: #565369;
+    color: $darkText;
     font-size: 60px;
     font-weight: 700;
     margin-top: -5px;
@@ -95,16 +95,17 @@ main {
   border-radius: 10px;
   background-color: transparent;
   border: 3px solid $border;
+  z-index: 2;
   &:focus {
     outline: none;
   }
   p {
     letter-spacing: 0.4em;
-    font-size: 15px;
-    text-transform: uppercase;
     color: white;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
     transform: scale(0.7, 1);
-    font-weight: 500;
   }
 }
 .choice-wrapper {
@@ -145,7 +146,7 @@ main {
   opacity: 0;
   pointer-events: none;
   transform: translate(-10%, -10%);
-  z-index: 99;
+  z-index: 3;
   .top {
     display: flex;
     justify-content: space-between;
@@ -173,7 +174,7 @@ main {
   width: 100%;
   justify-content: center;
   align-items: flex-end;
-  bottom: 10vh;
+  bottom: 7vh;
   padding-bottom: 50px;
   opacity: 0;
   pointer-events: none;
@@ -209,7 +210,7 @@ main {
     color: white;
     font-weight: 600;
     letter-spacing: 0.12em;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
   }
 }
 
@@ -236,6 +237,43 @@ main {
     }
     img {
       transform: scale(1.8);
+    }
+  }
+}
+.winner {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+  position: absolute;
+  top: 40%;
+  opacity: 0;
+  p {
+    font-size: 60px;
+    letter-spacing: normal;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+  button {
+    background-color: white;
+    color: hsl(214, 47%, 23%);
+    border: none;
+    width: 240px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 15px;
+    transform: scale(0.9, 1);
+    border-radius: 10px;
+    letter-spacing: 0.1em;
+    cursor: pointer;
+    &:hover {
+      color: #d63e5d;
+    }
+    &:focus {
+      outline: none;
     }
   }
 }
